--- a/hello/res/layout/multichoose.xml
+++ b/hello/res/layout/multichoose.xml
@@ -2,11 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" android:layout_height="fill_parent">
     
-   <Button android:id="@+id/confirm"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="圖檔多選" android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:minWidth="200px" />
+   <Button
+       android:id="@+id/confirm"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentBottom="true"
+       android:minWidth="200px"
+       android:text="圖檔多選" />
     
     <GridView
         android:id="@+id/PhoneImageGrid"
@@ -19,5 +21,13 @@
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/PhoneImageGrid"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
